--- a/templates/stok/urun_sil.html
+++ b/templates/stok/urun_sil.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load form_tags %}
 {% block title %}Ürün Sil - {{ urun.ad }}{% endblock %}
 {% block page_title %}Ürün Sil{% endblock %}
 
