--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="{% static 'css/site.css' %}">
+  <link rel="stylesheet" href="{% static 'css/toast.css' %}">
   {% block extra_head %}{% endblock %}
 </head>
 
@@ -85,9 +86,16 @@
             <i class="bi bi-wallet2"></i> <span>Finans Yönetimi</span>
           </a>
         </li>
+        {% if user.is_superuser %}
+        <li>
+          <a href="{% url 'kullanici_yonetimi:kullanici_listesi' %}" class="menu-item">
+            <i class="bi bi-people-fill"></i> <span>Kullanıcı Yönetimi</span>
+          </a>
+        </li>
+        {% endif %}
         <li>
           <a href="{% url 'kullanici_yonetimi:index' %}" class="menu-item">
-            <i class="bi bi-people"></i> <span>Kullanıcı Yönetimi</span>
+            <i class="bi bi-graph-up"></i> <span>Performans Analizi</span>
           </a>
         </li>
         <li>
@@ -151,6 +159,8 @@
   </div>
   {% endif %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="{% static 'js/toast.js' %}"></script>
+  <script src="{% static 'js/keyboard-shortcuts.js' %}"></script>
   {% block extra_js %}{% endblock %}
 </body>
 
